--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@ layout: default
                 <h2 class="section-heading">{{ p[0].title }}</h2>
                 <hr class="light">
                 <p class="text-faded">{{ p[0].content }}</p>
-                <a href="#services" class="btn btn-default btn-xl page-scroll">Portfolio</a>
+                <a href="#portfolio" class="btn btn-default btn-xl page-scroll">Portfolio</a>
             </div>
         </div>
     </div>
 </section>
 
-<section id="services">
+<section id="portfolio">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
@@ -54,7 +54,7 @@ layout: default
     </div>
 </section>
 
-<section class="no-padding" id="portfolio">
+<section class="no-padding">
     <div class="container-fluid">
         <div class="row no-gutter">
             {% for p in site.projects %}
