--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ title: Gillian Martin Photography
                     <div class="row no-gutter">
                         {% for p in site.projects %}
                         <div class="col-lg-3 col-md-4 col-sm-6">
-                            <a href="project.html#{{ p.name }}" class="portfolio-box">
+                            <a href="portfolio.html#{{ p.name }}" class="portfolio-box">
                                 <img src="img/{{ p.name }}/{{ p.img }}" class="img-responsive" alt="{{ p.title }}">
                                 <div class="portfolio-box-caption">
                                     <div class="portfolio-box-caption-content">
