Added event category

--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@ title: Gillian Lee Photography | Portfolio
     <div class="container gallery">
         <div class="row">
 
-            {% assign types = "Knitting;Family;Wedding" | split: ";" %}
+            {% assign types = "Knitting;Family;Weddings;Events" | split: ";" %}
 
             <div class="col-md-3" id="leftCol">
                 <nav class="navbar navbar-default affix">
